<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Driver.DriverHistoryTracking">

    <TextView
        android:id="@+id/activities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activities"
        android:gravity="center"
        android:padding="16dp"
        android:background="@color/appBar"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/linearLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activities">

        <Button
            android:id="@+id/buttonShowOngoingTrips"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="2.5dp"
            android:backgroundTint="@color/appBar"
            android:text="Ongoing Trips"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonShowHistory" />

        <Button
            android:id="@+id/buttonShowHistory"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="History"
            android:layout_marginLeft="2.5dp"
            android:backgroundTint="@color/appBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        >
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingVertical="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corners"
        app:layout_constraintTop_toBottomOf="@id/linearLayout01"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/col1"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:layout_marginLeft="3dp"
            >
        </TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:text="@string/col2"
            android:gravity="center"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/col3"
            android:gravity="center"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/col4"
            android:gravity="center"

            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/col5"
            android:gravity="center"
            ></TextView>
    </LinearLayout>
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainer"
        android:layout="@layout/fragment_driver_ongoing_trips"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayout02"
        app:layout_constraintBottom_toTopOf="@id/linearLayout03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:id="@+id/linearLayout03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/appBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">



        <Button
            android:id="@+id/mainBtn01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="@string/btn01"/>

        <Button
            android:id="@+id/activitiesBtn01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FF1C2946"
            android:gravity="center"
            android:text="@string/btn02"/>


        <Button
            android:id="@+id/profileBtn01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.85"
            android:background="@color/transparent"
            android:gravity="center"

            android:text="@string/btn04"></Button>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>