<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Driver.DriverManageRide">


    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:background="@color/appBar"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/AvailableRides"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textViewRideRequestTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:textSize="20sp"
        android:text="@string/RideRequests"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintStart_toStartOf="parent"
 />

    <androidx.fragment.app.FragmentContainerView
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:id="@+id/fragment_container_ride_requests"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewRideRequestTitle"
        app:layout_constraintBottom_toTopOf="@id/linearLayout03"
        tools:listitem="@layout/fragment_item_ride_request"/>
    <TextView
        android:id="@+id/tvRideStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/startRideButton"
        android:visibility="invisible"
        android:layout_marginBottom="10dp"
        android:text="Ride has started"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/startRideButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/button"
        android:text="Start Ride"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_container_ride_requests"
        android:textColor="@android:color/white"

     />
    <Button
        android:id="@+id/endRideButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/button"
        android:text="End Ride"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startRideButton"
        android:textColor="@android:color/white"

        />


    <LinearLayout
        android:id="@+id/linearLayout03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/appBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">



        <Button
            android:id="@+id/mainBtn01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:backgroundTint="#FF1C2946"
            android:gravity="center"
            android:text="@string/btn01"/>

        <Button
            android:id="@+id/activitiesBtn01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="@string/btn02"/>


        <Button
            android:id="@+id/profileBtn01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.85"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="@string/btn04"></Button>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>